--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.2",
     "mysql2": "^2.0.0",
     "sequelize": "^5.21.2",
+    "socket.io": "^2.3.0",
     "yup": "^0.27.0"
   },
   "devDependencies": {
